working game with ui

--- a/rps.html
+++ b/rps.html
@@ -6,6 +6,17 @@
     <title>Document</title>
 </head>
 <body>
+ <div id="container">
+    <button id="rock">Rock</button>
+    <button id="paper">Paper</button>
+    <button id="scissors">Scissors</button>
+ </div>
+ <div id="results">
+    <p id="score">Player 0 - Computer: 0</p>
+    <p id="roundResult">Round: </p>
+    <p id="finalResult">Final Scores:</p>
+ </div>
     <script src="rps.js"></script>
+
 </body>
 </html>
